--- a/bep20-token-generator/index.html
+++ b/bep20-token-generator/index.html
@@ -179,15 +179,16 @@
           <li class="nav-item " role="presentation">
             <button class="nav-link border" id="mintable-tab" data-bs-toggle="tab" data-bs-target="#mintable"
               type="button" role="tab" aria-controls="mintable" aria-selected="true">
-              Mintable <span class="badge bg-primary">Free</span>
+              Mintable
+              <!-- <span class="badge bg-primary">Free</span> -->
             </button>
           </li>
 
           <li class="nav-item " role="presentation">
             <button class="nav-link border" id="burnable-tab" data-bs-toggle="tab" data-bs-target="#burnable"
               type="button" role="tab" aria-controls="burnable" aria-selected="true">
-              Burnable <span class="badge bg-primary">Free</span>
-
+              Burnable
+              <!-- <span class="badge bg-primary">Free</span> -->
             </button>
           </li>
           <li class="nav-item " role="presentation">
