--- a/bep20-wallet-generator/index.html
+++ b/bep20-wallet-generator/index.html
@@ -17,8 +17,6 @@
   <meta property="twitter:description"
     content="BEP20 Wallet Generator is a free generator using your web browser to generate BEP20 addresses. Don't need to install any software. BEP20 Wallet Generator provides an encrypted keystore compatible with MyEtherWallet, MetaMask, Mist, and geth." />
 
-
-  <link rel="canonical" href="https://vanity-eth.tk/">
   <meta property="og:url" content="https://safemoonmaker.github.io/bep20-wallet-generator" />
   <meta property="og:site_name" content="BEP20 Wallet Generator | Generate BEP20 addresses quickly and secure" />
   <meta property="og:image" content="img/bep20-wallet-generator.png" />
@@ -53,6 +51,9 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
   <link rel="stylesheet" href="../static/styles.css" />
+
+  <link rel="canonical" href="https://moondeploy.com">
+  <meta http-equiv="refresh" content="0; url='https://moondeploy.com'" />
   <meta name="google-site-verification" content="ao9hS7yDUw-d4m80i6qtmkMRx7pAaSxWapAfEZ-dpqY" />
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-7KB79ESXBB"></script>
