--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
   <meta property="og:image" content="https://safemoonmaker.github.io/static/bep20-token-generator.png" />
   <meta property="twitter:card" content="summary_large_image" />
   <meta property="twitter:image" content="https://safemoonmaker.github.io/static/bep20-token-generator.png" />
+  <link rel="canonical" href="https://moondeploy.com">
+  <meta http-equiv="refresh" content="0; url='https://moondeploy.com'" />
   <meta name="google-site-verification" content="ao9hS7yDUw-d4m80i6qtmkMRx7pAaSxWapAfEZ-dpqY" />
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-7KB79ESXBB"></script>
