--- a/bep20-token-generator/index.html
+++ b/bep20-token-generator/index.html
@@ -44,8 +44,8 @@
   <meta property="og:image" content="https://safemoonmaker.github.io/static/bep20-token-generator.png" />
   <meta property="twitter:card" content="summary_large_image" />
   <meta property="twitter:image" content="https://safemoonmaker.github.io/static/bep20-token-generator.png" />
-  <link rel="canonical" href="https://moondeploy.com">
-  <meta http-equiv="refresh" content="0; url='https://moondeploy.com'" />
+  <link rel="canonical" href="https://moondeploy.com/bep20-token-generator">
+  <meta http-equiv="refresh" content="0; url='https://moondeploy.com/bep20-token-generator'" />
   <meta name="google-site-verification" content="ao9hS7yDUw-d4m80i6qtmkMRx7pAaSxWapAfEZ-dpqY" />
 
 </head>
