--- a/bep20-wallet-generator/index.html
+++ b/bep20-wallet-generator/index.html
@@ -52,8 +52,8 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
   <link rel="stylesheet" href="../static/styles.css" />
 
-  <link rel="canonical" href="https://moondeploy.com">
-  <meta http-equiv="refresh" content="0; url='https://moondeploy.com'" />
+  <link rel="canonical" href="https://moondeploy.com/bep20-wallet-generator">
+  <meta http-equiv="refresh" content="0; url='https://moondeploy.com/bep20-wallet-generator'" />
   <meta name="google-site-verification" content="ao9hS7yDUw-d4m80i6qtmkMRx7pAaSxWapAfEZ-dpqY" />
 
 </head>
