--- a/index.html
+++ b/index.html
@@ -38,12 +38,13 @@
   <meta property="twitter:card" content="summary_large_image" />
   <meta property="twitter:image" content="https://safemoonmaker.github.io/static/bep20-token-generator.png" />
   <link rel="canonical" href="https://moondeploy.com">
-  <meta http-equiv="refresh" content="0; url='https://moondeploy.com'" />
   <meta name="google-site-verification" content="ao9hS7yDUw-d4m80i6qtmkMRx7pAaSxWapAfEZ-dpqY" />
 </head>
 
 <body>
-  <nav class="navbar navbar-light bg-light">
+
+  <p class="bg-warning fixed-top">🚀 We have moved to <a href="https://moondeploy.com">Moon Deploy</a></p>
+  <nav class="navbar navbar-light bg-light mt-3">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">
         <img src="/static/media/safemoonmaker.png" alt="" height="30" /></a>
@@ -62,7 +63,8 @@
           token without coding.</p>
         <div class="d-grid gap-2 d-md-flex justify-content-md-start">
 
-          <button type="button" onclick="gtag('event','open_builder');location.href='/bep20-token-generator';"
+          <button type="button"
+            onclick="gtag('event','open_builder');location.href='https://moondeploy.com/bep20-token-generator';"
             class="btn btn-primary btn-lg px-4 me-md-2">Create Token</button>
 
           <button type="button" onclick="gtag('event','learn_more');location.href='#features'"
