--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
           token without coding.</p>
         <div class="d-grid gap-2 d-md-flex justify-content-md-start">
 
-          <button type="button"
-            onclick="gtag('event','open_builder');location.href='https://moondeploy.com/bep20-token-generator';"
-            class="btn btn-primary btn-lg px-4 me-md-2">Create Token</button>
+          <a href="https://moondeploy.com/bep20-token-generator">
+            <button type="button" class="btn btn-primary btn-lg px-4 me-md-2">Create Token</button>
+          </a>
 
           <button type="button" onclick="gtag('event','learn_more');location.href='#features'"
             class="btn btn-outline-secondary btn-lg px-4">Learn
@@ -419,142 +419,6 @@
         </div>
       </div>
     </div> -->
-  <div class="container" id="launch" hidden>
-    <div class="row">
-      <div class="col">
-        <h3 class="fw-bold mb-0">🚀 How to launch your own token ?</h3>
-        <br />
-        <ul>
-          <li>
-            Add Liquidity to Pancakeswap, so that others can buy and sell it.
-          </li>
-          <li>Share it to your family and friends</li>
-          <li>Tell the world about your own tokens, and go to the moon!</li>
-        </ul>
-        <br />
-        <br />
-      </div>
-      <div class="col d-flex justify-content-center">
-        <lottie-player src="https://assets2.lottiefiles.com/private_files/lf30_zxrt6xaq.json" background="transparent"
-          speed="1" style="width: 300px; height: 300px" loop autoplay></lottie-player>
-      </div>
-    </div>
-    <br /><br /><br />
-    <div class="row" id="ref_id" hidden>
-      <div class="col">
-        <h3 class="fw-bold mb-0">💰 Want to make some passive income?</h3>
-        <div class="d-flex justify-content-center">
-          <lottie-player src="https://assets3.lottiefiles.com/packages/lf20_OdVhgq.json" background="transparent"
-            speed="1" style="width: 300px; height: 300px" loop autoplay></lottie-player>
-        </div>
-      </div>
-      <div class="col">
-        <br />
-
-        <br />
-        <p class="earnRefferalText">
-          Earn money every time a new token's created using your link below.
-        </p>
-        <br />
-        <div class="row">
-          <mark class="col-sm ref_link">https://safemoonmaker.github.io?id=change_to_your_eth_address</mark>
-          <div class="col-sm-1"></div>
-
-          <button class="col-sm-2 btn btn-outline-primary copy_ref_link" id="copy-button" title="Copy to clipboard">
-            Copy
-          </button>
-        </div>
-      </div>
-    </div>
-
-    <br />
-  </div>
-  <div class="row text-center my-0 countdown" id="buy_token" hidden>
-    <h2 class="my-3">PRESALE <strong>COUNTDOWN</strong></h2>
-    <div id="clockdiv">
-      <div>
-        <span class="days">00</span>
-        <div class="smalltext">Days</div>
-      </div>
-      <div>
-        <span class="hours">00</span>
-        <div class="smalltext">Hours</div>
-      </div>
-      <div>
-        <span class="minutes">00</span>
-        <div class="smalltext">Minutes</div>
-      </div>
-      <div>
-        <span class="seconds">00</span>
-        <div class="smalltext">Seconds</div>
-      </div>
-    </div>
-    <p class="my-3">
-      After Presale ends, SafeMoonMaker will be live on Pancakeswap.
-    </p>
-  </div>
-
-  <div class="container" hidden>
-    <div class="row">
-      <div class="col-sm-6">
-        <h3 class="fw-bold mb-0">✅ Invest in SafeMoonMaker token</h3>
-        <br />
-        <ul>
-          <li>The only token that creates other tokens 🤑</li>
-          <li>Make cryptos easier for everyone ❤️</li>
-          <li>Enjoy massive growth potential 🚀</li>
-        </ul>
-        <br />
-        <h5>
-          <strong>💶 Tokenomics:</strong>
-        </h5>
-        <p>💰Total Supply: 1000000000 tokens</p>
-
-        <p>💸Tokens For Presale: 500000000 tokens</p>
-        <p>🔖Presale Rate: 5000000.0000 SMM per BNB</p>
-        <p>📈Market Cap: $62568</p>
-        <br />
-      </div>
-      <div class="col text-center">
-        <h5 class="col"><strong>Token Address</strong></h5>
-        <div class="row my-3">
-          <mark class="col-sm tokenAddress">0x56fb94eda9bf5e32520e636d270F52bf2bf1F1bE</mark>
-          <div class="col-sm-1"></div>
-
-          <button class="col-sm-2 btn btn-outline-primary copy_ref_link" id="copy-token-address"
-            title="Copy to clipboard">
-            Copy
-          </button>
-
-          <!-- <div class="col-sm-12 d-flex justify-content-center my-3"">
-              <button class="btn btn-outline-secondary">Chart</button>
-            </div> -->
-        </div>
-
-        <div class="row my-5">
-          <div class="form-group row">
-            <label>Enter the amount you want to buy!</label>
-            <div class="col">
-              <input min="0.1" max="100" step="0.5" class="buyAmount" type="number" placeholder="1 BNB = 5000000 SMM" />
-            </div>
-          </div>
-
-          <p class="my-4 showTokenAmount" style="display: block">
-            You will get <span class="tokenAmount"></span> SafeMoonMaker
-            tokens!
-          </p>
-
-          <div class="col-sm-12 d-flex justify-content-center">
-            <button class="buy_token btn btn-primary buyToken">Buy</button>
-          </div>
-
-          <p class="my-5" style="color: rgb(96, 96, 250)">
-            ***Note: You need to add the token address to your wallet
-          </p>
-        </div>
-      </div>
-    </div>
-  </div>
 
   <!-- Footer -->
   <footer class="text-center text-lg-start bg-light text-muted mt-5">
@@ -607,10 +471,12 @@
               Tools
             </h6>
             <p>
-              <a href="/bep20-token-generator" target="_blank" class="text-reset">BEP20 token generator</a>
+              <a href="https://moondeploy.com//bep20-token-generator" target="_blank" class="text-reset">BEP20 token
+                generator</a>
             </p>
             <p>
-              <a href="/bep20-wallet-generator" target="_blank" class="text-reset">BEP20 wallet generator</a>
+              <a href="https://moondeploy.com/bep20-wallet-generator" target="_blank" class="text-reset">BEP20 wallet
+                generator</a>
             </p>
           </div>
           <!-- Grid column -->
