--- a/bep20-token-generator/success/index.html
+++ b/bep20-token-generator/success/index.html
@@ -1,390 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>
-    Create BEP20 Token for FREE on
-    Binance Smart Chain | BEP20 Token Generator
-  </title>
-  <link rel="icon" href="/static/media/icon.png" />
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
-
-  <!-- This is our example code -->
-  <!-- <script type="text/javascript" src="./walletConnectExample.js"></script> -->
-  <!-- <script type="module" src="/static/test-module.js"></script> -->
-
-
-  <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
-
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-
-  <link rel="stylesheet" href="../static/styles.css" />
-  <meta name="description"
-    content="Create a BEP20 Token in less than a minute with the new Smart Contract Generator for Binance Smart Chain. No login. No setup. No coding required." />
-  <meta property="twitter:title" content="Create BEP20 Token for FREE on Binance Smart Chain | BEP20 Token Generator" />
-  <meta property="og:title" content="Create BEP20 Token for FREE on Binance Smart Chain | BEP20 Token Generator" />
-  <meta property="twitter:description"
-    content="Create a BEP20 Token in less than a minute with the new Smart Contract Generator for Binance Smart Chain. No login. No setup. No coding required." />
-  <meta property="og:description"
-    content="Create a BEP20 Token in less than a minute with the new Smart Contract Generator for Binance Smart Chain. No login. No setup. No coding required." />
-  <meta property="og:url" content="https://safemoonmaker.github.io/" />
-  <meta property="og:type" content="website" />
-  <meta property="og:image" content="https://safemoonmaker.github.io/static/bep20-token-generator.png" />
-  <meta property="twitter:card" content="summary_large_image" />
-  <meta property="twitter:image" content="https://safemoonmaker.github.io/static/bep20-token-generator.png" />
-  <link rel="canonical" href="https://moondeploy.com">
-  <meta http-equiv="refresh" content="0; url='https://moondeploy.com'" />
-  <meta name="google-site-verification" content="ao9hS7yDUw-d4m80i6qtmkMRx7pAaSxWapAfEZ-dpqY" />
-
-
-</head>
-
-<body class="d-flex flex-column min-vh-100">
-  <nav class="navbar navbar-light bg-light">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="/">
-        <img src="/static/media/safemoonmaker.png" alt="" height="30" />
-      </a>
-    </div>
-  </nav>
-
-  <!-- <div
-      class="
-        alert alert-primary alert-dismissible
-        fade
-        show
-        announcement-top-bar
-      "
-      role="alert"
-    >
-      <p class="d-none d-md-block">
-        🚀 Invest in SafeMoonMaker tokens.
-        <a href="#buy_token">Click here</a>
-      </p>
-      <p class="d-block d-md-none">
-        🚀 Invest in SafeMoonMaker tokens.
-        <a href="#buy_token">Click here</a>
-      </p>
-    </div> -->
-
-  <div class="d-flex justify-content-center mt-50">
-    <div class="border border-success p-2 my-5" id="success_creation" style="display: block">
-      <p>✅ SUCCESS! Now you can add your tokens to your wallet!</p>
-
-      <div class="my-5">
-        <mark class="col-sm newTokenAddress" style="font-size: small">new_token_address</mark>
-        <button onclick="gtag('event','copy_token_address')" id="copyTokenAddress"
-          class="btn btn-outline-primary copyTokenAddress" title="Copy to clipboard">
-          Copy
-        </button>
-
-
-      </div>
-
-      <p>
-        🔍 View your token on
-        <a id="view_token" href="" onclick="gtag('event','view_bscscan')">BscScan</a>.
-      </p>
-      <p>
-        ❓ If your token contract isn't verified automatically yet, <a href="https://t.me/TokenGeneratorBSC">contact
-          us.</a>
-      </p>
-      <!-- <button id="verify_contract">verifiy contract</button> -->
-      <p hidden>
-        👉 If you need help adding new token to wallet, check out
-        <a href="https://cryptonews.com/guides/how-to-add-tokens-to-metamask.htm">this article</a>.
-      </p>
-      <p hidden>
-        🔥 How to launch your own tokens ?
-        <a href="#launch">Click here.</a>
-      </p>
-      <p hidden>
-        💰 Want to make some passive income ?
-        <a href="#ref_id">Click here.</a>
-      </p>
-
-      <p hidden>
-        💸 Invest in SafeMoonMaker tokens.
-        <a href="#buy_token">Click here.</a>
-      </p>
-    </div>
-  </div>
-
-  <div class="container" id="launch" hidden>
-    <div class="row">
-      <div class="col">
-        <h3 class="fw-bold mb-0">🚀 How to launch your own token ?</h3>
-        <br />
-        <ul>
-          <li>
-            Add Liquidity to Pancakeswap, so that others can buy and sell it.
-          </li>
-          <li>Share it to your family and friends</li>
-          <li>Tell the world about your own tokens, and go to the moon!</li>
-        </ul>
-        <br />
-        <br />
-      </div>
-      <div class="col d-flex justify-content-center">
-        <lottie-player src="https://assets2.lottiefiles.com/private_files/lf30_zxrt6xaq.json" background="transparent"
-          speed="1" style="width: 300px; height: 300px" loop autoplay></lottie-player>
-      </div>
-    </div>
-    <br /><br /><br />
-    <div class="row" id="ref_id" hidden>
-      <div class="col">
-        <h3 class="fw-bold mb-0">💰 Want to make some passive income?</h3>
-        <div class="d-flex justify-content-center">
-          <lottie-player src="https://assets3.lottiefiles.com/packages/lf20_OdVhgq.json" background="transparent"
-            speed="1" style="width: 300px; height: 300px" loop autoplay>
-          </lottie-player>
-        </div>
-      </div>
-      <div class="col">
-        <br />
-
-        <br />
-        <p class="earnRefferalText">
-          Earn money every time a new token's created using your link below.
-        </p>
-        <br />
-        <div class="row">
-          <mark class="col-sm ref_link">https://safemoonmaker.github.io?id=change_to_your_eth_address</mark>
-          <div class="col-sm-1"></div>
-
-          <button class="col-sm-2 btn btn-outline-primary copy_ref_link" id="copy-button" title="Copy to clipboard">
-            Copy
-          </button>
-        </div>
-      </div>
-    </div>
-
-    <br />
-  </div>
-  <div class="row text-center my-0 countdown" id="buy_token" hidden>
-    <h2 class="my-3">PRESALE <strong>COUNTDOWN</strong></h2>
-    <div id="clockdiv">
-      <div>
-        <span class="days">00</span>
-        <div class="smalltext">Days</div>
-      </div>
-      <div>
-        <span class="hours">00</span>
-        <div class="smalltext">Hours</div>
-      </div>
-      <div>
-        <span class="minutes">00</span>
-        <div class="smalltext">Minutes</div>
-      </div>
-      <div>
-        <span class="seconds">00</span>
-        <div class="smalltext">Seconds</div>
-      </div>
-    </div>
-    <p class="my-3">
-      After Presale ends, SafeMoonMaker will be live on Pancakeswap.
-    </p>
-  </div>
-
-  <div class="container" hidden>
-    <div class="row">
-      <div class="col-sm-6">
-        <h3 class="fw-bold mb-0">✅ Invest in SafeMoonMaker token</h3>
-        <br />
-        <ul>
-          <li>The only token that creates other tokens 🤑</li>
-          <li>Make cryptos easier for everyone ❤️</li>
-          <li>Enjoy massive growth potential 🚀</li>
-        </ul>
-        <br />
-        <h5>
-          <strong>💶 Tokenomics:</strong>
-        </h5>
-        <p>💰Total Supply: 1000000000 tokens</p>
-
-        <p>💸Tokens For Presale: 500000000 tokens</p>
-        <p>🔖Presale Rate: 5000000.0000 SMM per BNB</p>
-        <p>📈Market Cap: $62568</p>
-        <br />
-      </div>
-      <div class="col text-center">
-        <h5 class="col"><strong>Token Address</strong></h5>
-        <div class="row my-3">
-          <mark class="col-sm tokenAddress">0x56fb94eda9bf5e32520e636d270F52bf2bf1F1bE</mark>
-          <div class="col-sm-1"></div>
-
-          <button class="col-sm-2 btn btn-outline-primary copy_ref_link" id="copy-token-address"
-            title="Copy to clipboard">
-            Copy
-          </button>
-
-          <!-- <div class="col-sm-12 d-flex justify-content-center my-3"">
-              <button class="btn btn-outline-secondary">Chart</button>
-            </div> -->
-        </div>
-
-        <div class="row my-5">
-          <div class="form-group row">
-            <label>Enter the amount you want to buy!</label>
-            <div class="col">
-              <input min="0.1" max="100" step="0.5" class="buyAmount" type="number" placeholder="1 BNB = 5000000 SMM" />
-            </div>
-          </div>
-
-          <p class="my-4 showTokenAmount" style="display: block">
-            You will get <span class="tokenAmount"></span> SafeMoonMaker
-            tokens!
-          </p>
-
-          <div class="col-sm-12 d-flex justify-content-center">
-            <button class="buy_token btn btn-primary buyToken">Buy</button>
-          </div>
-
-          <p class="my-5" style="color: rgb(96, 96, 250)">
-            Note: You need to add the token address to your wallet
-          </p>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <!-- Footer -->
-  <footer class="text-center text-lg-start bg-light text-muted mt-auto">
-    <!-- Section: Social media -->
-    <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
-      <!-- Left -->
-      <div class="me-5 d-none d-lg-block">
-        <span>Get connected with us:</span>
-
-      </div>
-
-      <!-- Left -->
-
-      <!-- Right -->
-      <div>
-        <a href="https://t.me/TokenGeneratorBSC" class="icon me-4" target="_blank" onclick="gtag('event','telegram')">
-          <i class="fab fa-telegram fa-2x red"></i>
-        </a>
-        <a href="https://www.youtube.com/channel/UCJr5ccy7p33qt4Yy-rLKEfg" class="icon" target="_blank"
-          onclick="gtag('event','youtube')">
-          <i class="fab fa-youtube fa-2x"></i>
-        </a>
-
-      </div>
-      <!-- Right -->
-    </section>
-    <!-- Section: Social media -->
-
-    <!-- Section: Links  -->
-    <section class="" hidden>
-      <div class="container text-center text-md-start mt-5">
-        <!-- Grid row -->
-        <div class="row mt-3">
-          <!-- Grid column -->
-          <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
-            <!-- Content -->
-            <h6 class="text-uppercase fw-bold mb-4">
-              <i class="fas fa-gem me-3"></i>SafeMoon Maker
-            </h6>
-            <p>
-              Our mission is to make token creation easy and accessible for everyone.
-            </p>
-          </div>
-          <!-- Grid column -->
-
-          <!-- Grid column -->
-          <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
-            <!-- Links -->
-            <h6 class="text-uppercase fw-bold mb-4">
-              Tools
-            </h6>
-            <p>
-              <a href="/bep20-token-generator" target="_blank" class="text-reset">BEP20 token generator</a>
-            </p>
-            <p>
-              <a href="/bep20-wallet-generator" target="_blank" class="text-reset">BEP20 wallet generator</a>
-            </p>
-          </div>
-          <!-- Grid column -->
-
-          <!-- Grid column -->
-          <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
-            <!-- Links -->
-            <h6 class="text-uppercase fw-bold mb-4">
-              Useful links
-            </h6>
-            <p>
-              <a href="https://t.me/TokenGeneratorBSC" target="_blank" class="text-reset">Telegram</a>
-            </p>
-            <p>
-              <a href="https://www.youtube.com/channel/UCJr5ccy7p33qt4Yy-rLKEfg" target="_blank"
-                class="text-reset">Youtube</a>
-            </p>
-            <!-- <p>
-                <a href="#!" class="text-reset">Blogs</a>
-              </p> -->
-            <p>
-              <a href="https://forms.gle/mZjhovdVTizCwRSB8" class="text-reset" target="_blank"> Feedback</a>
-            </p>
-            <p>
-              <a href="https://t.me/TokenGeneratorBSC" class="text-reset" target="_blank">Help</a>
-            </p>
-          </div>
-          <!-- Grid column -->
-
-          <!-- Grid column -->
-          <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
-            <!-- Links -->
-
-
-            <h6 class="text-uppercase fw-bold mb-4">
-              Services
-            </h6>
-            <p>
-              <a href="https://t.me/TokenGeneratorBSC" class="text-reset" target="_blank">Smart contract
-                development</a>
-            </p>
-            <!-- <p><i class="fas fa-home me-3"></i> Safemoon Maker</p> -->
-            <!-- <p>
-                <i class="fas fa-envelope me-3"></i>
-  
-              </p> -->
-
-          </div>
-          <!-- Grid column -->
-        </div>
-        <!-- Grid row -->
-      </div>
-    </section>
-    <!-- Section: Links  -->
-
-    <!-- Copyright -->
-    <div class="text-center p-3" style="background-color: rgba(17, 0, 255, 0.2)">
-      © 2021-2022 Copyright:
-      <a class="text-white" href="https://safemoonmaker.github.io">SafeMoonMaker</a>
-    </div>
-    <!-- Copyright -->
-  </footer>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/js-cookie@rc/dist/js.cookie.min.js"></script>
-  <script>
-    if (navigator.userAgent.indexOf("Safari") != -1) {
-      $(".introMedia").html('<img width="500" height="500" class="d-block mx-lg-auto img-fluid" src="/static/media/intro3.gif">')
-    }
-  </script>
-
-
-  <script type="module" src="../static/misc.js"></script>
-
-  <script type="module" src="../static/success.js"></script>
-
-  <!-- Include this in your HTML page -->
-  <!-- Start of HubSpot Embed Code -->
-  <script type="text/javascript" id="hs-script-loader" async defer src="//js-eu1.hs-scripts.com/25571645.js"></script>
-  <!-- End of HubSpot Embed Code -->
-</body>
-
+<html>
+  <head>
+    <meta http-equiv="refresh" content="1; url='https://moondeploy.com'" />
+  </head>
+  <body>
+    <p>Redirect to <a href="https://moondeploy.com">this link</a>.</p>
+  </body>
 </html>
