--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
           <h4 class="mb-3 "><i class="fas fa-ribbon text-primary pe-2"></i>How do I generate BEP20 token for free?
           </h4>
           <p>
-            In order to create BEP20 token for free, open our <a href="/bep20-token-generator">BEP20 token
+            In order to create BEP20 token for free, open our <a href="https://moondeploy.com/bep20-token-generator">BEP20 token
               generator</a> and
             follow instructions.
           </p>
@@ -474,7 +474,7 @@
               Tools
             </h6>
             <p>
-              <a href="https://moondeploy.com//bep20-token-generator" target="_blank" class="text-reset">BEP20 token
+              <a href="https://moondeploy.com/bep20-token-generator" target="_blank" class="text-reset">BEP20 token
                 generator</a>
             </p>
             <p>
